add: マップの操作

--- a/content/ja/post/003-map.md
+++ b/content/ja/post/003-map.md
@@ -1,12 +1,13 @@
 ---
 date: 2022-06-21 20:30
 description: "Goのマップについてまとめた記事です。"
-featured_image: "images/Go1-640x371.jpg"
+featured_image: ""
 tags: []
 title: "マップの操作"
 disable_share: false
-draft: true
+draft: false
 ---
+
 - [マップとは](#マップとは)
 - [値の初期化](#値の初期化)
 - [値およびキーの存在有無の取得](#値およびキーの存在有無の取得)
@@ -77,7 +78,23 @@ fmt.Println(m)
 
 # マップを利用して重複を削除
 
+```go
+brothers := []string{"taro", "jiro", "taro", "saburo", "saburo", "shiro"}
 
+unique := make([]string, 0, len(brothers))
+
+m := make(map[string]struct{})
+for _, v := range brothers {
+	if _, ok := m[v]; ok {
+		continue
+	}
+	unique = append(unique, v)
+	m[v] = struct{}{}
+}
+
+fmt.Println(unique)
+// OutPut: [taro jiro saburo shiro]
+```
 
 
 # 参考文献
